[package]
name = "gravishot"
version = "0.1.0"
authors = ["tomaspecl <tomaspecl@email.cz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
headless = []
include_assets = ["bevy_embedded_assets"]
profiling = ["bevy/trace_chrome"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

#[profile.release]
#lto = "thin"

[dependencies]
bevy = { version = "0.11" }
rand = "0.8.4"
bevy_rapier3d = { version = "0.22", features = ["debug-render","serde-serialize"] }
bevy-inspector-egui = "0.19"
#bevy-inspector-egui-rapier = { version = "0.3", features = ["rapier3d"] }
#bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git" }
bevy_embedded_assets = { version = "0.8", optional = true }
serde = "1"
bevy_egui = "0.21"
once_cell = "1.17"
circular-buffer = "0.1.1"
bevy_quinnet = "0.5"
bitmask-enum = "2"
