[package]
name = "gravishot"
version = "0.1.0"
authors = ["Tomáš Pecl <tomaspecl@email.cz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
headless = []
include_assets = ["bevy_embedded_assets"]
profiling = ["bevy/trace_chrome"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

#[profile.release]
#lto = "thin"

[dependencies]
bevy = { version = "0.13" }
rand = "0.8.4"
bevy_rapier3d = { version = "0.26", features = ["debug-render","serde-serialize"] }
bevy-inspector-egui = "0.24"
#bevy-inspector-egui-rapier = { version = "0.3", features = ["rapier3d"] }
#bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git" }
bevy_embedded_assets = { version = "0.10", optional = true }
serde = "1"
bevy_egui = "0.27"
once_cell = "1.17"
bevy_quinnet = "0.7"
bitmask-enum = "2"
bevy_gravirollback = { path = "../gravirollback", features = ["serialize"] }
#bevy_gravirollback = { git = "https://github.com/tomaspecl/bevy_gravirollback", rev = "89bd31ffc1be530a92a8fa8ce31ff60e75cb72b6", features = ["serialize"] }
